update home page to open links in new window and separate projects from world cup spikes

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 	<h2>one plus one equals for your entertainment</h2>
 	<div id="container">
 		<div id="contents">
-		<h3>ideations</h3>
-		<a href="riocalling/index.html">Rio Calling</a>
+		<h3><a href="riocalling/index.html" target="_blank"><strong>About Me</strong></a></h3>
+		<h3>Ideations & Creations</h3>
+		<a href="http://www.letsgetmessi.com" target="_blank"><strong>Let's Get Messi</strong></a><p>Celebrating the art of sport.</p>
+		<a href="http://project-mealmates.herokuapp.com" target="_blank"><strong>Mealmates</strong></a><p>Eat with people who eat like you.</p>
+		<a href="http://www.giffylube.com" target="_blank"><strong>Giffylube</strong></a>
+		<p>Whet your brain.</p>
+		<h3>World Cup Spikes</h3>
+		<a href="worldcupschedule/index.html" target="_blank"><strong>Group Stage Schedule</strong></a>
 		<br />
-		<a href="tictactoe/index.html">World Cup Tic Tac Toe</a>
+		<a href="tictactoe/index.html" target="_blank"><strong>Tic Tac Toe</strong></a>
 		<br />
-		<a href="worldcupticketsales/index.html">World Cup Ticket Sales</a>
+		<a href="worldcupshootout/index.html" target="_blank"><strong>PK Shoot-Out!</strong></a>
+		<br />
 		</div>
 	</div>
 </body>
