add transit alarm app to list with no link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@ $(document).ready(function() {
 	    $('#letsgetmessi_img').hide();    
 	});
 
+	$('#transit-alarm').mouseenter(function() {
+	  $('#transit-alarm_img').show();
+	}).mouseleave(function(){
+	    $('#transit-alarm_img').hide();    
+	});
+
 	$('#mealmates').mouseenter(function() {
 	  $('#mealmates_img').show();
 	}).mouseleave(function(){
@@ -72,7 +78,8 @@ $(document).ready(function() {
 		</a>
 		<h3>Ideations & Creations</h3>
 		<a href="http://www.letsgetmessi.com" target="_blank" id="letsgetmessi"><strong>Let's Get Messi</strong></a><p>Celebrating the art of sport.</p>
-		<a href="http://project-mealmates.herokuapp.com" target="_blank" id="mealmates"><strong>Mealmates</strong></a><p>Eat with people who eat like you.</p>
+		<a href="&" id="transit-alarm"><strong>Transit Alarm</strong></a><p>Never Miss Your Bus Stop</p>
+		<a href="http://www.mealmat.es" target="_blank" id="mealmates"><strong>Mealmates</strong></a><p>Eat with people who eat like you.</p>
 		<a href="http://www.giffylube.com" target="_blank" id="giffylube"><strong>Giffylube</strong></a>
 		<p>Whet your brain.</p>
 		<h3>World Cup Spikes</h3>
@@ -86,8 +93,9 @@ $(document).ready(function() {
 		<div id="viewer">
 			<img src="img/aboutme.png" id="aboutme_img">
 			<img src="img/letsgetmessi.png" id="letsgetmessi_img">
-			<img src="img/giffylube.png" id="giffylube_img">
+			<img src="img/transit-alarm.png" id="transit-alarm_img">
 			<img src="img/mealmates.png" id="mealmates_img">
+			<img src="img/giffylube.png" id="giffylube_img">
 			<img src="img/schedule.png" id="schedule_img">
 			<img src="img/tictactoe.png" id="tictactoe_img">
 			<img src="img/shootout.png" id="shootout_img">
