make minor styling changes

--- a/index.html
+++ b/index.html
@@ -76,24 +76,24 @@ $(document).ready(function() {
 			<div id="aboutme_text"><strong><h3 id="about_me">About Me</h3></strong></div>
 			<div id="name_text"><strong><h3 id="about_me">Kate Bankert</h3></strong></div>
 		</a>
-		<h3>Ideations & Creations</h3>
+		<h3>Rails 4 Projects</h3>
 		<a href="http://www.letsgetmessi.com" target="_blank" id="letsgetmessi"><strong>Let's Get Messi</strong></a><p>Celebrating the art of sport.</p>
-		<a href="&" id="transit-alarm"><strong>Transit Alarm</strong></a><p>Never Miss Your Bus Stop</p>
+		<a href="&" id="transit-alarm"><strong>Transit Alarm</strong></a><p>Never miss your bus stop</p>
 		<a href="http://www.mealmat.es" target="_blank" id="mealmates"><strong>Mealmates</strong></a><p>Eat with people who eat like you.</p>
 		<a href="http://www.giffylube.com" target="_blank" id="giffylube"><strong>Giffylube</strong></a>
 		<p>Whet your brain.</p>
-		<h3>World Cup Spikes</h3>
+		<h3>AngularJS Spikes</h3>
 		<a href="worldcupschedule/index.html" target="_blank" id="schedule"><strong>Group Stage Schedule</strong></a>
 		<br />
-		<a href="tictactoe/index.html" target="_blank" id="tictactoe"><strong>Tic Tac Toe</strong></a>
+		<a href="tictactoe/index.html" target="_blank" id="tictactoe"><strong>World Cup Tic Tac Toe</strong></a>
 		<br />
-		<a href="worldcupshootout/index.html" target="_blank" id="shootout"><strong>PK Shoot-Out!</strong></a>
+		<a href="worldcupshootout/index.html" target="_blank" id="shootout"><strong>Penalty Kick Shoot-Out!</strong></a>
 		<br />
 		</div>
 		<div id="viewer">
 			<img src="img/aboutme.png" id="aboutme_img">
 			<img src="img/letsgetmessi.png" id="letsgetmessi_img">
-			<img src="img/transit-alarm.png" id="transit-alarm_img">
+			<img src="img/transit-alarm.jpg" id="transit-alarm_img">
 			<img src="img/mealmates.png" id="mealmates_img">
 			<img src="img/giffylube.png" id="giffylube_img">
 			<img src="img/schedule.png" id="schedule_img">
