add new letsgetmessi image

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@ $(document).ready(function() {
 			<div id="name_text"><strong><h3 id="about_me">Kate Bankert</h3></strong></div>
 		</a>
 		<h3>Rails 4 Projects</h3>
-		<a href="http://www.letsgetmessi.com" target="_blank" id="letsgetmessi"><strong>Let's Get Messi</strong></a><p>Celebrating the art of sport.</p>
+		<a href="http://www.letsgetmessi.com" target="_blank" id="letsgetmessi"><strong>Let's Get Messi</strong></a><p>Celebrating the art of sport</p>
 		<a href="&" id="transit-alarm"><strong>Transit Alarm</strong></a><p>Never miss your bus stop</p>
-		<a href="http://www.mealmat.es" target="_blank" id="mealmates"><strong>Mealmates</strong></a><p>Eat with people who eat like you.</p>
+		<a href="http://www.mealmat.es" target="_blank" id="mealmates"><strong>Mealmates</strong></a><p>Eat with people who eat like you</p>
 		<a href="http://www.giffylube.com" target="_blank" id="giffylube"><strong>Giffylube</strong></a>
-		<p>Whet your brain.</p>
+		<p>Whet your brain</p>
 		<h3>AngularJS Spikes</h3>
 		<a href="worldcupschedule/index.html" target="_blank" id="schedule"><strong>Group Stage Schedule</strong></a>
 		<br />
