add new Shoot Out photo, reorder AJS, take out opacity for viewer

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@ $(document).ready(function() {
 		<a href="http://www.giffylube.com" target="_blank" id="giffylube"><strong>Giffylube</strong></a>
 		<p>Whet your brain</p>
 		<h3>AngularJS Spikes</h3>
-		<a href="worldcupschedule/index.html" target="_blank" id="schedule"><strong>Group Stage Schedule</strong></a>
+		<a href="worldcupshootout/index.html" target="_blank" id="shootout"><strong>World Cup Shoot Out</strong></a>
 		<br />
 		<a href="tictactoe/index.html" target="_blank" id="tictactoe"><strong>World Cup Tic Tac Toe</strong></a>
 		<br />
-		<a href="worldcupshootout/index.html" target="_blank" id="shootout"><strong>Penalty Kick Shoot-Out!</strong></a>
+		<a href="worldcupschedule/index.html" target="_blank" id="schedule"><strong>World Cup Schedule</strong></a>
 		<br />
 		</div>
 		<div id="viewer">
@@ -96,9 +96,9 @@ $(document).ready(function() {
 			<img src="img/transit-alarm.jpg" id="transit-alarm_img">
 			<img src="img/mealmates.png" id="mealmates_img">
 			<img src="img/giffylube.png" id="giffylube_img">
-			<img src="img/schedule.png" id="schedule_img">
-			<img src="img/tictactoe.png" id="tictactoe_img">
 			<img src="img/shootout.png" id="shootout_img">
+			<img src="img/tictactoe.png" id="tictactoe_img">
+			<img src="img/schedule.png" id="schedule_img">
 		</div>
 	</div>
 	<br>
